# fit_etl

./: .gitignore  pyproject.toml
fit_etl/: analysis.py  constants.py  extract.py  fidata.py  fit-it.py  fitfile.py  utils.py  workout.py
fit_etl/analysis/: __init__.py  break_analyzer.py
fit_etl/extract/: __init__.py  fidata.py  workout.py
fit_etl/tooling/: __init__.py  constants.py  utils.py
